up to date dash board mofidications

--- a/hrithvika/Views/Admin/AddMainGallery.cshtml
+++ b/hrithvika/Views/Admin/AddMainGallery.cshtml
@@ -18,46 +18,39 @@
             {
                 @Html.AntiForgeryToken()
 
-                <div class="form-horizontal text-left">
+                <div class="form-horizontal">
 
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        <div class="col-md-10">
+                    <div class="form-group row">
+                        <div class="col-md-4">
                             @Html.TextBoxFor(model => model.files, "", new { @type = "file", @multiple = "multiple" })
 
-                            <br /> <br />
-                            <div class="col-md-6">
-                                @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Image Title " } })
-                                @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
-                            </div>
-
-
-                            <br /> <br />
-                            <div class="col-md-6">
-                                @Html.DropDownList("category", (IEnumerable<SelectListItem>)ViewData["Dbtype"], "-- Select Category  --", new { required = true, @class = "form-control", @id = "Dbtype" })
-                                @Html.ValidationMessageFor(model => model.category)
-                            </div>
-
-
-                            <br /> <br />
+                        </div>
+                        <div class="col-md-4">
+                            @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Image Title " } })
+                            @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-md-4">
+                            @Html.DropDownList("category", (IEnumerable<SelectListItem>)ViewData["Dbtype"], "-- Select Category  --", new { required = true, @class = "form-control", @id = "Dbtype" })
+                            @Html.ValidationMessageFor(model => model.category)
+                        </div>
+                    </div>
+                    <div class="row">
+                        <br /> <br />
+                        <div class="col-md-6">
                             @Html.CheckBoxFor(model => model.isimportant) <label>* check for images to show in home page.</label>
-                            <br /> <br />
-                            <br />
+                        </div>
+                        <div class="col-md-6">
                             <input type="submit" class="btn btn-success" style="width: 200px; height: 40px" value="Save" />
                             @Html.ActionLink("Cancel", "Index", "Admin", null, new { @class = "btn btn-danger" })
 
                         </div>
+                        <br />
                     </div>
-
-
                 </div>
             }
-
-            <div>
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-
+          
         </div>
     </div>
 </div>
