--- a/hrithvika/Views/Home/Index.cshtml
+++ b/hrithvika/Views/Home/Index.cshtml
@@ -143,7 +143,8 @@
                 Now a days as the world facing an unseen pandemic some people are risking their life to save others life. In keeping view of this I STAND FOR THE NATION came up with a unique campaign to show our small gratitude towards these frontline warriors calling it as “SOUND OF GRATITUDE”. On the coming August 15th 2020 I STAND FOR THE NATION requests every Indian across the globe to chorus our national anthem “JANA GANA MANA” by the time of Red Fort, New Delhi Flag hosting.
             </p> <br /><div style="text-align:right">
                 Supported by :
-                <a href="https://ekam.org/" target="_blank"> <img width="200" src="~/Images/gallery/ekam.png" /></a>
+                <a href="https://ekam.org/" target="_blank"> <img width="200" src="~/Images/gallery/ekam.png" /></a><a href="https://tv5news.in/"> <img width="150" src="~/Images/TV5_Telugu.png" /></a>
+
             </div>
         </div>
 
@@ -152,14 +153,14 @@
 <div class="container-fluid" id="soundofgratitude" style="background:#00031d;color:#fff;padding-bottom:0px!important">
     <div class="row">
         <div class="col-md-5 padding text-center">
-          
+
             <h1><b>PLEDGE HERE FOR </b> </h1>
             <img width="100%" src="~/Images/soundofgratitiude.png" /><br />
             <button type="button" class="pushbutton" data-toggle="modal" data-target="#exampleModal">
                 <i class="fas fa-hand-paper"></i>
             </button>
             <br />   <h2 style="color:#fff" class="h2_mobile"> </h2><p>Be a part of the movement and participate in building a better future for our country! Join this historical event and stand up for the values that make our country great. Make a difference.</p>
-           
+
         </div>
         <div class="col-md-7">
             <img width="100%" src="~/Images/hrithvikImages/Banner.jpg" />
@@ -174,20 +175,8 @@
             <h4 style="color:#09022c">Encouraging our Frontline warriors of Covid-19</h4>
             <br />
             <div id="divtimer">
-                <h1 style="font-family:customfont!important">August 15<sup>th</sup> 2020 8:00 AM IST.</h1>
-                <br />
 
-                <br />
-                <table style="margin:0px auto!important">
-                    <tr>
-                        <td>
-                            <div class="clock text-center"></div>
-                        </td>
-                    </tr>
-                </table>
-                <br />
-                <br /> <br />
-                <br />
+                <img width="300" src="~/Images/celeb.jpg" />
             </div>
         </div>
     </div>
