--- a/hrithvika/Views/Shared/_adminLayout.cshtml
+++ b/hrithvika/Views/Shared/_adminLayout.cshtml
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     @RenderSection("scripts", required: false)
     <!-- Font Awesome JS -->
+    <style>
+        #content {
+        width:100% !important}
+    </style>
 </head>
 <body>
     <div class="wrapper">
