--- a/hrithvika/Views/Home/Index.cshtml
+++ b/hrithvika/Views/Home/Index.cshtml
@@ -172,7 +172,7 @@
             <br />
             <div id="divtimer">
 
-                <img width="300" src="~/Images/celeb.jpg" />
+                <img width="400" src="~/Images/bravehearts.jpg" />
             </div>
         </div>
     </div>
