--- a/hrithvika/Views/Home/Index.cshtml
+++ b/hrithvika/Views/Home/Index.cshtml
@@ -132,8 +132,254 @@
         </div>
     </div>
 </div>
+<div class="telegram_dv">
+    " <b>1</b>  DAY  &nbsp;<b>1</b> MINUTE
+    <br />
+    FOR OUR BRAVE HEARTS
+    <br />
+    IS IT TOO MUCH TO ASK FOR ? "
+    <br />
 
+    <br />
+    <button type="button" class="btn btn_white" GroupName="btndn" data-toggle="modal" data-target="#myModaldnt"><i class="fa fa-download"></i>&nbsp;&nbsp;Poster</button>
+
+    <!-- Modal -->
+    <div id="myModaldnt" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" GroupName="btndn" class="close" data-dismiss="modal">&times;</button>
+
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+
+                        <div class="col-md-6">
+                            <h4 class="text-center text-dark">Telugu</h4>
+                            <hr />
+                            <a class="btn  registerbtn" style="width:100%" href="Images/isfntel.jpg" download="Images/isfntel.jpg" target="_blank">Download Image</a><br /><br />
+                            <a class="btn  registerbtn" style="width:100%" href="pdf/istandforthenation-TE.pdf" download="pdf/istandforthenation-TE.pdf" target="_blank">Download  PDF</a>
+                        </div>
+                        <div class="col-md-6">
+                            <h4 class="text-center text-dark">English</h4>
+                            <hr />
+                            <a class="btn  registerbtn" style="width:100%" href="Images/isfteng.jpg" download="Images/isfteng.jpg" target="_blank">Download  Image</a><br /><br />
+                            <a class="btn  registerbtn" style="width:100%" href="pdf/istandforthenation-EE.pdf" download="pdf/istandforthenation-EE.pdf" target="_blank">Download  PDF</a>
+                        </div>
+                    </div>
+                    <br />
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 <div class="container-fluid joindv_Index">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="h2_mobile">JOIN THE EVENT  <span style="font-size:14px">OR</span> @Html.ActionLink("Register as NGO", "NGO", "People", null, new { @class = "btn btn-primary registerbtn" })</h2>
+            <p>Be a part of the movement and participate in building a better future for our country! Join this historical event and stand up for the values that make our country great. Make a difference.</p>
+            <div class="row">
+                <div class="col-md-12">
+                    @if (@ViewBag.success != null)
+                    {
+                        <label class="lblsuc text-center">@ViewBag.success</label>
+                    }
+                </div>
+            </div>
+            @using (Html.BeginForm("Createhome", "People", "Post"))
+            {
+                @Html.ValidationSummary(true)
+                <div class="row">
+                    @if (@ViewBag.message != null)
+                    {
+                        <label class="lblsuc text-center">@ViewBag.message</label>
+                    }
+
+                    <div class="col-md-6">
+                        <div class="editor-field">
+                            <input type="text" name="name" id="name" class="form-control" placeholder="Name" GroupName="btnjoin" required />
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 textbox_margin">
+                        <div class="editor-field">
+                            <input type="text" name="phone" id="phone" class="form-control" placeholder="Phone" GroupName="btnjoin" required />
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="editor-field">
+                            <input type="email" name="email" id="email" class="form-control" GroupName="btnjoin" placeholder="Email" />
+                        </div>
+                    </div>
+                </div>
+                <br />
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="editor-field">
+                            @*<input type="text" name="state" placeholder="State" class="form-control" id="State" required />*@
+                            <select name="state" id="State" class="form-control" style="width:100%;height:30px;" placeholder="State" GroupName="btnjoin">
+                                <option>---Select State---</option>
+                                <option value="Andhra Pradesh">Andhra Pradesh</option>
+                                <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                                <option value="Assam">Assam</option>
+                                <option value="Bihar">Bihar</option>
+                                <option value="Chhattisgarh">Chhattisgarh</option>
+                                <option value="Goa">Goa</option>
+                                <option value="Gujarat">Gujarat</option>
+                                <option value="Haryana">Haryana</option>
+                                <option value="Himachal Pradesh">Himachal Pradesh</option>
+                                <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+                                <option value="Jharkhand">Jharkhand</option>
+                                <option value="Karnataka">Karnataka</option>
+                                <option value="Kerala">Kerala</option>
+                                <option value="Madhya Pradesh">Madhya Pradesh</option>
+                                <option value="Maharashtra">Maharashtra</option>
+                                <option value="Manipur">Manipur</option>
+                                <option value="Meghalaya">Meghalaya</option>
+                                <option value="Mizoram">Mizoram</option>
+                                <option value="Nagaland">Nagaland</option>
+                                <option value="Odisha">Odisha</option>
+                                <option value="Punjab">Punjab</option>
+                                <option value="Rajasthan">Rajasthan</option>
+                                <option value="Sikkim">Sikkim</option>
+                                <option value="Tamil Nadu">Tamil Nadu</option>
+                                <option value="Telangana">Telangana</option>
+                                <option value="Tripura">Tripura</option>
+                                <option value="Uttarakhand">Uttarakhand</option>
+                                <option value="Uttar Pradesh">Uttar Pradesh</option>
+                                <option value="West Bengal">West Bengal</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="col-md-6 textbox_margin">
+                        <div class="editor-field">
+                            @*INSERT INTO country(id,NAME)VALUES('1',''),('2',''),('3',''),('4',''),('5',''),('6',''),('7','')*@
+
+                            @*<input type="text" name="country" placeholder="Country" class="form-control" id="Country" required />*@
+                            <select name="country" id="country" class="form-control" style="width:100%;height:30px;" GroupName="btnjoin" placeholder="country">
+                                <option>---Select country---</option>
+                                <option value="India">India</option>
+                                <option value="USA">USA</option>
+                                <option value="England">England</option>
+                                <option value="Canada">Canada</option>
+                                <option value="Australia">Australia</option>
+                                <option value="Russia">Russia</option>
+                                <option value="Other">Other</option>
+
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-md-4">
+                        <input type="submit" class="btn btn-success loginbtn" style="width: 100%" GroupName="btnjoin" value="Join the Team" />
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
+
+                </div>
+
+            }
+            <br />
+        </div>
+    </div>
+</div>
+<div class="container-fluid padding" style="background:#00031d;color:#fff">
+    <div class="row">
+        <div class="col-md-6 col-lg-4 order-2  order-md-1">
+            <br />
+
+            <img width="90%" src="~/Images/crpf.png" />
+            <br />
+            <br />
+            <p>
+                It's time we remember and Honour the sacrifice these young soldiers have made and are still doing so as we live and breathe freedom. So fellow countrymen, On February 14th 2020 at 15:15 local time (09:45 GMT), we will stand up a minute in honour of these brave soldiers who laid down their lives for us ,does not matter where and in which country you are ,we will prove our oneness which will be the greatest tribute we give for our martyrs who died for the very purpose.
+            </p> <br />
+        </div>
+        <div class="col-md-6 col-lg-8 order-1 order-md-2">
+            <br />
+            <br />
+            <h2 class="text-center" style="color:#fff">Reason for "I STAND FOR THE NATION"</h2>
+            <br />
+            <div class="row">
+                <div class="col-md-12 fontsize">
+                    <br />
+                    <p data-aos="fade-right">
+                        February 14th, 2019 while the entire world was celebrating the festival of love and affection, our beloved country was marked with the blood of our brave soldiers, the day which can never be erased from the history. On this very day a convoy of vehicles carrying security personnel on the Jammu Srinagar National Highway was attacked by a vehicle-borne suicide bomber at Lethpora in the Pulwama district, the attack resulted in the deaths of 40 Central Reserve Police Force personnel and the attacker. It was a devastating attack, There are these soldiers who stand guard at the border braving the extreme temperatures and the enemy's bullets whizzing by, Closing their eyes to the sufferings of his own kith and kin, "They play god, when they choose our life over theirs". <br />
+                        <br />
+                    </p>
+                </div>
+            </div>
+            <div class="container d-none d-md-none d-lg-block">
+                <div class="row text-center" data-aos="fade-right">
+                    <div class="col-md-3 nopadding nopaddings">
+                        <div class="image-box">
+                            <img src="~/Images/hrithvikImages/2.jpg" style="max-height:465px" width="100%" alt="pulwama">
+                        </div>
+                    </div>
+                    <div class="col-md-3 nopadding nopaddings" style="background:#00be46">
+                        <br />
+                        <br />
+                        <br />
+                        <h4 class="h4_ad" style="color:#fff;text-align:center;vertical-align:middle">PULWAMA ATTACK</h4> <br />
+                        <br />
+                        <br />
+                    </div>
+                    <div class="col-md-3 nopadding nopaddings">
+                        <div class="image-box">
+                            <img src="~/Images/hrithvikImages/6.jpg" style="max-height:465px" width="100%" alt="pulwama">
+                        </div>
+                    </div>
+                    <div class="col-md-3  nopadding nopaddings">
+                        <div class="image-box">
+                            <img src="~/Images/hrithvikImages/9.jpg" style="max-height:465px" width="100%" alt="pulwama">
+                        </div>
+                    </div>
+                </div>
+                <div class="row text-center" data-aos="fade-right">
+                    <div class="col-md-3 nopadding nopaddings">
+                        <div class="image-box">
+                            <img src="~/Images/hrithvikImages/10.jpg" style="max-height:465px" width="100%" alt="pulwama">
+                        </div>
+                    </div>
+                    <div class="col-md-3  nopadding nopaddings">
+                        <div class="image-box">
+                            <img src="~/Images/hrithvikImages/11.jpg" style="max-height:465px" width="100%" alt="pulwama">
+                        </div>
+                    </div>
+                    <div class="col-md-3 nopadding nopaddings" style="background:#d75400">
+                        <br />
+                        <br />
+
+                        <br />
+                        <h4 class="h4_ad" style="color:#fff;text-align:center;vertical-align:middle">14/02/2019</h4> <br />
+
+                        <br />
+                        <br />
+                    </div>
+                    <div class="col-md-3 nopadding nopaddings">
+                        <div class="image-box">
+                            <img src="~/Images/hrithvikImages/14.jpg" style="max-height:465px" width="100%" alt="pulwama">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="display:none" class="container-fluid joindv_Index">
     <div class="row">
         <div class="col-md-12">
             <br />
@@ -146,7 +392,7 @@
 
     </div>
 </div>
-<div class="container-fluid" id="soundofgratitude" style="background:#00031d;color:#fff;padding-bottom:0px!important">
+<div class="container-fluid" id="soundofgratitude" style="background:#00031d;color:#fff;padding-bottom:0px!important;display:none">
     <div class="row">
         <div class="col-md-5 padding text-center">
 
@@ -164,7 +410,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid background_about">
+<div class="container-fluid background_about" style="display:none">
     <div class="row background_about_sec_color">
         <div class="col-md-8 text-center padding_mobile" data-aos="fade-up">
             <br />
