--- a/hrithvika/Views/Shared/_Layout.cshtml
+++ b/hrithvika/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?#soundofgratitude"><i class="fa fa-hand-paper-o">&nbsp; </i>Pledge</a>
+                    <a class="nav-link" href="/Home/Index?#soundofgratitude"><i class="fa fa-hand-paper-o">&nbsp; </i>JOIN YOUR HANDS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Home/Events"> <i class="fa fa-calendar"></i> Events</a>
